Use static factory instead of constructor for primitive types